# legocar

./: .gitignore  cli_tools_documentation  environment.sh  gitmanual
AndroidUDPTCPTest/: .project  AndroidManifest.xml
AndroidUDPTCPTest/res/layout/: activity_main.xml
documentation/: addremotes.sh  altera_installation_documentation  cli_tools_documentation  gitmanual
doku/: doku.aux  doku.blg  doku.tex
doku/pic/plot_burnout/: eicht1.eps  plot
doku/pic/plot_burnout_asr/: eicht1.eps  plot
doku/pic/plot_slow/: eicht1.eps  plot
doku/pic/plot_slow2/: eicht1.eps  plot
finalpres/: main.aux  main.nav  main.tex  main.toc
firmware/servoboard/: led.c  led.h  main.c  makefile  servo.c  servo.h  testservo.py  twi.c  twi.h
firmware/servoboard/test/: testled.py  testservo.py
fpga/: christian.qsf  rainersassign.qsf
fpga/i2ctest/: christian.qpf  i2ctest.qpf  i2ctest.qsf  toplevel_spireader.qsf
fpga/i2ctest/hdl-src/: edge_detector.vhd  edge_detector2.vhd  i2ctest.csv  i2ctest.vhd  motor_controller.vhd  servo_controller.vhd  seven_segment.vhd  speed_acc_switch.vhd  speed_control.vhd  speed_sensor.vhd  speed_toplevel.vhd  speedsensorv2.vhd  spi.vhd  spireader.vhd  spislave.vhd  toplevel.vhd  toplevel_all.vhd  toplevel_servo.vhd  toplevel_spireader.vhd  toplevel_spitest.vhd
fpga/i2ctest/simulation/modelsim/: i2c_master_tst.vht  i2ctest.vht  motor_controller_test.vht  speed_sensor_tst.vht  spi_test.vht  toplevel_test.vht
hardware/motorboard/: main-Back.ps  main-cache.lib  main.brd-bak  main.net  main.sch
hardware/powerboard/: main-B_Cu.ps  main-cache.lib  main.bak  main.cmp  main.kicad_pcb  main.kicad_pcb-bak  main.net  main.pro  main.sch
hardware/sensorboard/: main-cache.lib  main.bak  main.cmp  main.kicad_pcb  main.kicad_pcb-bak  main.net  main.pro  main.sch
hardware/servoboard/: _autosave-main-append.kicad_pcb  _autosave-main.brd  main-B_Adhes.ps  main-B_Mask.ps  main-B_Paste.ps  main-B_SilkS.ps  main-Back.ps  main-F_Adhes.ps  main-F_Mask.ps  main-F_Paste.ps  main-F_SilkS.ps  main-Front.ps  main-append-B_Cu.ps  main-cache.lib  main.000  main.bak  main.brd  main.brd-bak  main.cmp  main.net  main.pro  main.sch
helloworld/: cartest.bdf  cartest.jdi  cartest.qsf  cartest.qws  qsys_design.cmp  qsys_design.html  qsys_design.qsys  qsys_design.sopcinfo  qsys_design_generation.rpt
helloworld/.qsys_edit/: preferences.xml
helloworld/qsys_design/synthesis/: qsys_design.qip  qsys_design.v
helloworld/qsys_design/synthesis/submodules/: qsys_design_addr_router.sv  qsys_design_addr_router_001.sv  qsys_design_cmd_xbar_demux.sv  qsys_design_cmd_xbar_demux_001.sv  qsys_design_cmd_xbar_mux.sv  qsys_design_id_router.sv  qsys_design_id_router_002.sv  qsys_design_nios2_qsys_0.sdc  qsys_design_nios2_qsys_0.v  qsys_design_nios2_qsys_0_jtag_debug_module_tck.v  qsys_design_nios2_qsys_0_jtag_debug_module_wrapper.v  qsys_design_nios2_qsys_0_oci_test_bench.v  qsys_design_nios2_qsys_0_ociram_default_contents.mif  qsys_design_nios2_qsys_0_test_bench.v  qsys_design_onchip_memory2_0.hex  qsys_design_onchip_memory2_0.v  qsys_design_rsp_xbar_demux_002.sv  qsys_design_rsp_xbar_mux.sv  qsys_design_rsp_xbar_mux_001.sv  qsys_design_sysid_qsys_0.v
helloworld/software/carbsp/: .cproject  .project  Makefile  alt_sys_init.c  linker.h  linker.x  mem_init.mk  memory.gdb  public.mk  settings.bsp  summary.html  system.h
helloworld/software/helloworld/: .project  Makefile  helloworld.map  helloworld.objdump  main.c
helloworld/software/hw2/: main.c
helloworld_fettes_board/: cartest.bdf  cartest.jdi  cartest.qpf  cartest.qsf  cartest.qws  qsys_design.bsf  qsys_design.html  qsys_design.qsys  qsys_design.sopcinfo
helloworld_fettes_board/.qsys_edit/: preferences.xml
helloworld_fettes_board/qsys_design/synthesis/: qsys_design.qip
helloworld_fettes_board/qsys_design/synthesis/submodules/: qsys_design_addr_router.sv  qsys_design_addr_router_001.sv  qsys_design_cmd_xbar_demux.sv  qsys_design_cmd_xbar_demux_001.sv  qsys_design_cmd_xbar_mux.sv  qsys_design_id_router.sv  qsys_design_id_router_002.sv  qsys_design_irq_mapper.sv  qsys_design_jtag_uart_0.v  qsys_design_led_pio.v  qsys_design_nios2_qsys_0.v  qsys_design_nios2_qsys_0_jtag_debug_module_sysclk.v  qsys_design_sysid_qsys_0.v  qsys_design_timer_0.v
helloworld_fettes_board/software/: generatestuff.sh
helloworld_fettes_board/software/carbsp/: settings.bsp
helloworld_fettes_board/software/helloworld/: .cproject
helloworld_fettes_board/software/hw2/: Makefile  blubb
midtermpres/: main.tex
plots/: eich.eps  eich2.eps  eich21.eps  eich22.eps  eich31.eps  eich32.eps  eich33.eps  eich34.eps  eich35.eps  first_schlupf_nonschlupf.eps  ourlog  ourlog2  ourlog3  ourlog4  ourlog_fast  plot
raspi/: Makefile  compile.sh  config.h  fpga_spi.c  fpga_spi.h  main.c  servo.c  servo.h  servoboard.c  servoboard.h  servosim.c  tcpserver.c  tcpserver.h  wiimote.c  wiimote.h
raspi/raspi/: Makefile  commands.h  compile.sh  config.h  fpga_spi.c  fpga_spi.h  main.c  servo.c  servo.h  servoboard.c  servofpga.c  servofpga.h  servosim.c  servosim.h  tcpserver.c  wiimote.c  wiimote.h
raspi/ros/legocar_driver/: CMakeLists.txt  package.xml
raspi/ros/legocar_driver/launch/: legocar.launch
raspi/ros/legocar_driver/src/: legocar_driver_node.cpp  servo.cpp  servo.h
raspi/ros/legocar_odometry/: CMakeLists.txt  package.xml
raspi/ros/legocar_odometry/src/: legocar_odometry_node.cpp
raspi/ros/legocar_sonar/: CMakeLists.txt  package.xml
raspi/ros/legocar_sonar/src/: legocar_sonar_node.cpp
raspi/ros/legocar_wiimote/: CMakeLists.txt  package.xml
raspi/ros/legocar_wiimote/src/: legocar_wiimote_node.cpp
raspi/ros/pinky_driver/: CMakeLists.txt  package.xml
raspi/ros/pinky_driver/src/: pinky_driver_node.cpp
sim/: Makefile  camera.cc  camera.h  car.cc  car.h  compile.sh  config.h  global.c  global.h  main.cc  map.cc  map.h  myarea.cc  myarea.h  sensor.cc  sensor.h  tcpserver.c  tcpserver.h  units.h  vectors.cc  vectors.h
sockettest/AndroidUDPTCPTest/: build.xml
sockettest/LinuxUDPTCPsockettest/: client.c  clienttcp.c  compile  server.c
(+20 files in other folders)
