<?xml version="1.0"?>
<package>
  <name>legocar_driver</name>
  <version>0.0.1</version>
  <description>The legocar_driver package</description>
  <maintainer email="pi@todo.todo">pi</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>