<?xml version="1.0"?>
<package>
  <name>legocar_sonar</name>
  <version>0.0.1</version>
  <description>The legocar_sonar package reads the distance from the srf02 ultrasonic transducer</description>
  <maintainer email="tatsch@gmail.com">Julian Tatsch</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>