<?xml version="1.0"?>
<package>
  <name>legocar_wiimote</name>
  <version>0.0.1</version>
  <description>The legocar_wiimote package translates wiimote messages into ackermann steering msgs for the legocar_driver</description>
  <maintainer email="tatsch@gmail.com">Julian Tatsch</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_depend>wiimote</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>turtlesim</run_depend>
  <run_depend>ackermann_msgs</run_depend>
  <run_depend>wiimote</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>